tests/asm/error/label_error_2.s
.name "zork"
.comment "I'M ]ALIIIIVE"


#le_12!= shoule be error

le_12!=

live	%1

liv: live %1
	
